--- a/tweet/vercel.json
+++ b/tweet/vercel.json
@@ -1,15 +1,13 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "manage.py",
-            "use": "@vercel/python"
-        }
-    ],
+    "builds": [{
+      "src": "tweet/wsgi.py",
+      "use": "@vercel/python",
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.11.3" }
+    }],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "manage.py"
-        }
+      {
+        "src": "/(.*)",
+        "dest": "tweet/wsgi.py"
+      }
     ]
 }
